--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
     </div>
 
     <div id="center">
+        <div id="calculator-body">
+            <div id="calculator-display">Display</div>
+            <div id="one">1</div>
+            <div id="two">2</div>
+            <div id="three">3</div>
+            <div id="plus" class="operator">+</div>
+            <div id="four">4</div>
+            <div id="five">5</div>
+            <div id="six">6</div>
+            <div id="minus" class="operator">-</div>
+            <div id="seven">7</div>
+            <div id="eight">8</div>
+            <div id="nine">9</div>
+            <div id="multiply" class="operator">x</div>
+            <div id="equal">=</div>
+            <div id="decimal">.</div>
+            <div id="clear">CLEAR</div>
+            <div id="divide" class="operator">/</div>
+        </div>
         
     </div>
 
